Fixed flexbox margin on mobile devices

--- a/styles/main.css
+++ b/styles/main.css
@@ -176,8 +176,8 @@ footer a
 /* ------------------- */
 nav
 {
-	/* Corps de la barre (meilleur équivalent des lignes 206
-		à 208 actuellement commentées mais sortant du
+	/* Corps de la barre (meilleur équivalent des lignes 207
+		à 211 actuellement commentées mais sortant du
 		flux de la page à cause de la position fixée) */
 	display: flex;
 	justify-content: center;
@@ -203,11 +203,10 @@ nav ul
 	/* Alignement automatique centrée de la barre
 		(de façon horizontale) */
 	top: 7rem;
-	left: 5%;
-	right: 5%;
-	margin: 0 auto 0 auto;
+	margin: 0 5% 0 5%;
 	/* left: 50%;
 	right: 0;
+	margin: 0 auto 0 auto;
 	display: fixed;
 	transform: translatex(-50%); */
 
